Test fix for jumping skill popup

--- a/_assets/css/decks.scss
+++ b/_assets/css/decks.scss
@@ -296,7 +296,7 @@
 .qtip-dark
 {
   background-color: #111;
-  min-width: 500px;
+  min-width: 550px;
 }
 
 .reducedmargin{
